# GamifizierteToDoListe

./: .gitignore  AddTaskBox.cpp  AddTaskBox.h  CMakeLists.txt  Categories.cpp  Categories.h  README.md  Task.cpp  Task.h  Tasks.cpp  Tasks.h  Window.cpp  Window.h  createTask.cpp  createTask.h  main.cpp  readme.md
GUI/: AchievementListWidget.cpp  AchievementListWidget.h  AchievementWidget.cpp  AchievementWidget.h  AchievementsPage.cpp  AchievementsPage.h  AddTaskBox.cpp  AddTaskBox.h  CategoryViewPage.cpp  CategoryViewPage.h  CategoryWidget.cpp  CategoryWidget.h  ConfirmDeleteWindow.cpp  ConfirmDeleteWindow.h  MainPage.cpp  MainPage.h  MainWindow.cpp  MainWindow.h  Page.cpp  Page.h  PageLayoutWidget.cpp  PageLayoutWidget.h  Points.cpp  Points.h  TaskWidget.cpp  TaskWidget.h  ToDoListWindow.cpp  ToDoListWindow.h  TodoListWidget.cpp  TodoListWidget.h  XpWidget.cpp  XpWidget.h
GUI/ConfettiAnimation/: Confetto.cpp  Confetto.h  DrawConfetti.cpp  DrawConfetti.h
GUI/pages/: AchievementsPage.cpp  AchievementsPage.h  CategoryViewPage.cpp  CategoryViewPage.h  MainPage.cpp  MainPage.h  Page.cpp  Page.h
GUI/popups/: AddPictureBox.cpp  AddPictureBox.h  AddTaskBox.cpp  AddTaskBox.h  ConfirmDeleteWindow.cpp  ConfirmDeleteWindow.h  EditTaskBox.cpp  EditTaskBox.h
GUI/widgets/: XpWidget.cpp  XpWidget.h
GUI/widgets/achievement/: AchievementListWidget.cpp  AchievementListWidget.h  AchievementWidget.cpp  AchievementWidget.h
GUI/widgets/addTaskWidgets/: AddPictureBoxElementWidget.cpp  AddPictureBoxElementWidget.h  AddTaskElementWidget.cpp  AddTaskElementWidget.h  DatePickerWidget.cpp  DatePickerWidget.h
GUI/widgets/category-task/: CategoryWidget.cpp  CategoryWidget.h  TaskWidget.cpp  TaskWidget.h
GUI/widgets/filter/: FilterWidget.cpp  FilterWidget.h
PROGRAMIEREN/PicGroug6Develoupment/: Task.h
docs/: Einarbeitung_Vera.md  Sprint 1 BC Stand 12.Mai 19:00.xlsx
docs/Class Structure/: ClassStructure.drawio  GUI_structure.drawio
docs/Einarbeitung/: Einarbeitung_Lars_Funk.txt  Einarbeitung_Mika_Schick.txt  Einarbeitung_Veronica  Eingelesen_Ole_Weighardt.txt
todolib/: Achievement.cpp  Achievement.h  AchievementList.cpp  AchievementList.h  CMakeLists.txt  Category.cpp  Category.h  Profile.cpp  Profile.h  Task.cpp  Task.h  ToDoList.cpp  ToDoList.h  Xp.cpp  Xp.h  todolib.h
todolib/achievement-System/: Achievement.h  AchievementList.cpp  AchievementList.h
todolib/category-task-System/: Category.cpp  Category.h  Task.h  ToDoList.cpp
todolib/todo-System/: Category.cpp  Category.h  Task.cpp  Task.h  TaskFilterParameter.cpp  TaskFilterParameter.h  ToDoList.cpp  ToDoList.h
utility/: Globals.cpp  Globals.h  Json.h  JsonList.tpp
