

add_library(todolib todolib.h category-task-System/ToDoList.cpp category-task-System/ToDoList.h category-task-System/Category.cpp category-task-System/Category.h category-task-System/Task.cpp category-task-System/Task.h achievement-System/Achievement.cpp achievement-System/Achievement.h achievement-System/AchievementList.cpp achievement-System/AchievementList.h)