

add_library(todolib todolib.h
        todo-System/ToDoList.cpp todo-System/ToDoList.h
        todo-System/Category.cpp todo-System/Category.h
        todo-System/Task.cpp todo-System/Task.h
        achievement-System/Achievement.cpp achievement-System/Achievement.h
        achievement-System/AchievementList.cpp achievement-System/AchievementList.h
        Profile.cpp Profile.h
        Xp.cpp Xp.h
        todo-System/TaskFilterParameter.h todo-System/TaskFilterParameter.cpp)